# Little-Quadcopter

./: .gitignore  .gitmodules  README.en.md  README.md  购物清单.xlsx
cv/: CMakeLists.txt  README.md  test.cpp
cv/src/: main.cpp  test.cpp
pycv/: README.md
pycv/challenge2/: README.md  main.py
pycv/challenge2/src/: main.py
pycv/challenge2/src/shapedectct/: Picture.py  __init__.py
pycv/challenge2/src/shapedetect/: Picture.py  __init__.py
